--- a/Magda/Views/Orders/Index.cshtml
+++ b/Magda/Views/Orders/Index.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.AdditionalRemarks)
             </th>
+            <th>
+                LIstId
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -49,15 +52,17 @@
                 @Html.DisplayFor(modelItem => item.AdditionalRemarks)
             </td>
             <td>
-                <button onclick="location.href='@Url.Action("Create", "GuestLists", new {ListId=item.Id})'">szmata</button>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                @using (Html.BeginForm("Create", "GuestLists"))
+                @Html.DisplayFor(modelItem => item.GuestList.Order)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a>
+                @using (Html.BeginForm("Create", "GuestLists", FormMethod.Post))
                 {
-                    <input type="text" name="ListId" value="@item.Id" />
-                    <input type="submit" />
+                    <input hidden="hidden" name="OrderId" type="text" value="@item.OrderId" />
+                    <input type="submit" value="Create Guest List" />
                 }
+                <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
             </td>
         </tr>
 }
