--- a/Magda/Views/Home/Index.cshtml
+++ b/Magda/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Siema</h1>
+    <a href="https://localhost:7133/Orders">Link do orders</a>
+    
 </div>
