--- a/Magda/Views/Orders/Details.cshtml
+++ b/Magda/Views/Orders/Details.cshtml
@@ -40,6 +40,19 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AdditionalRemarks)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+        <dd class="col-sm-10">
+            @if (Model.Status == 1)
+            {
+                <text>Zakoñczono</text>
+            }
+            else
+            {
+                <text>W trakcie realizacji</text>
+            }
+        </dd>
     </dl>
 </div>
 <div>
